feat: adiciona contêiner para centralizar as views e formulários

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     </div>
 
     <!-- view da Página de Controlest -->
+    <div class="view-container">
     <div id="controles-view" class="view" style="display: none;">
         <main id="controles-page">
             <section id="cadastro-controle">
@@ -118,8 +119,10 @@
             </section>
         </main>
     </div>
+    </div>
 
     <!-- view da Pagina com o Relatório de conformidade -->
+    <div class="view-container">
     <div id="conformidade-view" class="view" style="display: none;">
         <main id="relatorio-conformidade-page">
             <section id="relatorio-conformidade">
@@ -151,6 +154,7 @@
                 </table>
             </section>
         </main>
+    </div>
     </div>
 
  <!-- Footer -->
