feat: adiciona contêiner para organizar tabelas

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 </div>
 
                 <!-- Tabela de Relatório -->
+                <div class="list-container">
                 <table id="tabela-relatorio">
                     <thead>
                         <tr>
@@ -152,6 +153,7 @@
                         <!-- Linhas de relatório serão preenchidas dinamicamente -->
                     </tbody>
                 </table>
+                </div>
             </section>
         </main>
     </div>
