feat: adiciona contêiner para organizar dashboard

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </header>
 
     <!-- View do Dashboard -->
+    <div class="dashboard-container">
     <div id="dashboard-view" class="view">
         <main id="dashboard">
             <!-- Summary Section -->
@@ -50,6 +51,8 @@
             </section>
         </main>
     </div> 
+    </div>
+    
     <!-- View da Página de Ativos -->
     <div id="ativos-view" class="view" style="display: none;">
         <main id="ativos-page">
