feat: adiciona class viw-container na ativos-view para vizualização do formulario centro da tela

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
     
     <!-- View da Página de Ativos -->
+    <div class="view-container">
     <div id="ativos-view" class="view" style="display: none;">
         <main id="ativos-page">
             <!-- Section: Cadastro de Ativo -->
@@ -85,6 +86,7 @@
                 </form>
             </section>
         </main>
+    </div>
     </div>
 
     <!-- view da Página de Controlest -->
