refactor: unificar classes redundantes no formulário para eliminar duplicação de estilos CSS
- Mescladas duas classes CSS com as mesmas propriedades para evitar duplicação desnecessária.
- Ajustado o HTML do formulário para utilizar a nova classe unificada.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <!-- View do Dashboard -->
-    <div class="dashboard-container">
+    <div class="view-container">
     <div id="dashboard-view" class="view">
         <main id="dashboard">
             <!-- Summary Section -->
