fix: correção do nome da tabela-controle tabela-controles

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                     <!-- Tabela de controle -->
                     <div class="list-container">
-                        <table id="tabela-controle">
+                        <table id="tabela-controles">
                             <thead>
                                 <tr>
                                     <td>Nome do Ativo</td>
