feat: inclusao de controles-loading e atoivos-loading para carregamento da pagina.

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
                         </div>
                     </form>
 
+                    <div id="ativos-loading" style="display: none; text-align: center; margin-top: 10px;">
+                        <p>Carregando ativos...</p>
+                    </div>
+
                     <!-- Tabela de Ativos -->
                     <div class="list-container">
                         <table id="tabela-ativos">
@@ -95,6 +99,7 @@
                                     <td>Tipo</td>
                                     <td>Status</td>
                                     <td>Responsavel</td>
+                                    <td>Ação</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -140,15 +145,20 @@
                             </div>
                     </form>
 
+                    <div id="controles-loading" style="display: none; text-align: center; margin-top: 10px;">
+                        <p>Carregando controles...</p>
+                    </div>
+
                     <!-- Tabela de controle -->
                     <div class="list-container">
                         <table id="tabela-controles">
                             <thead>
                                 <tr>
-                                    <td>Nome do Ativo</td>
-                                    <td>Tipo</td>
-                                    <td>Status</td>
-                                    <td>Responsavel</td>
+                                    <td>Descrição do Controle</td>
+                                    <td>Categoria</td>
+                                    <td>Código Alfanumérico:</td>
+                                    <td>Anotações</td>
+                                    <td>Ação</td>
                                 </tr>
                             </thead>
                             <tbody>
