feat: inclui metodo put de conformidades e outras correções

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">   
+    <link href="./css/bootstrap.min.css" rel="stylesheet">   
 
     <title>SecureTrack</title>
 </head>
@@ -213,7 +213,7 @@
                             </table>
 
                             <div class="form-buttons">
-                                <button id="salvar-conformidade" onClick="salvarConformidade()" class="action-button">Salvar Conformidade</button>
+                                <button id="salvar-conformidade" onClick="salvarAssociacoes()" class="action-button">Salvar Conformidade</button>
                                 <button type="button" class="action-button" id="cancelar-conformidade">Cancelar</button>
                             </div>
                         </div>
