fix: corrige Erro cors no post

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <div class="view-container">
         <div id="dashboard-view" class="view">
             <main id="dashboard">
+                <h2>Dashboard SecureTrack</h2>
                 <!-- Summary Section -->
                 <section id="summary">
                     <div class="summary-item" id="summary-implementados">
