feat:configurando parra consulta phpinfo

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                         <label for="observacoes-ativo">Observações:</label>
                         <textarea id="observacoes-ativo" class="input-field" name="observacoes-ativo"></textarea>
                         
+                        <label for="ip-ativo">Endereço IP:</label>
+                        <input type="text" id="ip-ativo" class="input-field" name="ip-ativo" placeholder="Ex: 192.168.0.1">
+
                         <div class="form-buttons">
                             <button type="submit" class="action-button" id="salvar-ativo">Salvar</button>
                             <button type="button" class="action-button" id="cancelar-cadastro">Cancelar</button>
@@ -116,7 +119,8 @@
                                     <td>Tipo</td>
                                     <td>Status</td>
                                     <td>Responsavel</td>
-                                    <td>Ação</td>
+                                    <td>Observação</td>
+                                    <td>IP</td>
                                 </tr>
                             </thead>
                             <tbody>
