--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
                         <label for="ip-ativo">Endereço IP:</label>
                         <input type="text" id="ip-ativo" class="input-field" name="ip-ativo" placeholder="Ex: 192.168.0.1">
 
+                        <div style="display: flex; align-items: center; gap: 8px;">
+                            <input type="text" id="ip-ativo" class="input-field" name="ip-ativo" placeholder="Ex: 192.168.0.1">
+                            <button type="button" class="btn btn-info" onclick="abrirModalIpInfo()">Consultar IP</button>
+                        </div>
+
                         <div class="form-buttons">
                             <button type="submit" class="action-button" id="salvar-ativo">Salvar</button>
                             <button type="button" class="action-button" id="cancelar-cadastro">Cancelar</button>
