feat: ccriacao do modal para consulta de IP info

--- a/index.html
+++ b/index.html
@@ -331,5 +331,19 @@
 <script src="./js/scripts.js"></script>
 
 </div>    
+
+<div class="modal fade" id="ipInfoModal" tabindex="-1" aria-labelledby="ipInfoModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="ipInfoModalLabel">Informações do IP</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+        </div>
+        <div class="modal-body">
+          <pre id="ip-info-content" style="white-space: pre-wrap;"></pre>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
