--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+
     <link href="./css/bootstrap.min.css" rel="stylesheet">   
 
     <title>SecureTrack</title>
@@ -325,6 +326,7 @@
     <p class="footer-text">© 2024 SecureTrack. Todos os direitos reservados.</p>
 </footer>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="./js/navigation.js"></script>
 <script src="./js/dashboard.js"></script>
 <script src="./js/scripts.js"></script>
