fix: correção na chamada a api

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
             <li><a href="#dashboard-view" class="nav-link">Dashboard</a></li>
             <li><a href="#ativos-view" class="nav-link">Ativos</a></li>
             <li><a href="#controles-view" class="nav-link">Controles</a></li>
-            <li><a href="#conformidade-view" class="nav-link">Relatório</a></li>           
-            <li><a href="#responsavel-view" class="nav-link">Cadastro de Responsáveis</a></li>           
+            <li><a href="#conformidade-view" class="nav-link">Relatório</a></li>     
         </ul>
     </nav>
 </header>
@@ -255,7 +254,7 @@
                         </select>
                         <button type='submit'  id="aplicar-filtro" class="action-button">Aplicar Filtro</button>
                     </div>
-                    <</form>
+                    </form>
 
                     <!-- Tabela de Relatório -->
                     <div class="list-container">
@@ -278,7 +277,7 @@
         </div>
     </div>
 
-    <div id="responsaveis-view" class="view hidden p-8 space-y-6">
+    <div id="responsavel-view" class="view hidden p-8 space-y-6">
         <h2 class="text-2xl font-semibold">Responsáveis</h2>
       
         <!-- Formulário de novo responsável -->
